force-app/main/default/objects/Maturity_Follow_Data__c/Maturity_Follow_Data__c.object-meta.xml
<CustomObject>
    <label>満期フォローデータ</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>満期フォローデータ番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>