force-app/main/default/objects/Maturity_Follow_Data__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>住所</label>
    <length>380</length>
    <type>LongTextArea</type>
</CustomField>