force-app/main/default/objects/Maturity_Follow_Data__c/fields/AddressKana__c.field-meta.xml
<CustomField>
    <fullName>AddressKana__c</fullName>
    <label>住所カナ</label>
    <length>380</length>
    <type>LongTextArea</type>
</CustomField>