force-app/main/default/objects/Maturity_Follow_Data__c/fields/AgencyCode__c.field-meta.xml
<CustomField>
    <fullName>AgencyCode__c</fullName>
    <label>代理店コード</label>
    <length>40</length>
    <type>Text</type>
</CustomField>