force-app/main/default/objects/Maturity_Follow_Data__c/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <label>相対支社コード</label>
    <length>15</length>
    <type>Text</type>
</CustomField>