force-app/main/default/objects/Maturity_Follow_Data__c/fields/CollectiveName__c.field-meta.xml
<CustomField>
    <fullName>CollectiveName__c</fullName>
    <label>集団名</label>
    <length>380</length>
    <type>LongTextArea</type>
</CustomField>