force-app/main/default/objects/Maturity_Follow_Data__c/fields/ContactInfo__c.field-meta.xml
<CustomField>
    <fullName>ContactInfo__c</fullName>
    <label>事務上連絡先</label>
    <length>32</length>
    <type>Text</type>
</CustomField>