force-app/main/default/objects/Maturity_Follow_Data__c/fields/CustomerCallManagement__c.field-meta.xml
<CustomField>
    <fullName>CustomerCallManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>カスタマーセンターコールデータ</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>満期フォローデータ</relationshipLabel>
    <relationshipName>CustumerMaturity</relationshipName>
    <type>Lookup</type>
</CustomField>