force-app/main/default/objects/Maturity_Follow_Data__c/fields/InsuranceFee__c.field-meta.xml
<CustomField>
    <fullName>InsuranceFee__c</fullName>
    <label>保険料</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>