force-app/main/default/objects/Maturity_Follow_Data__c/fields/InsuranceFrom__c.field-meta.xml
<CustomField>
    <fullName>InsuranceFrom__c</fullName>
    <label>保険始期</label>
    <type>Date</type>
</CustomField>