force-app/main/default/objects/Maturity_Follow_Data__c/fields/InsuranceItem__c.field-meta.xml
<CustomField>
    <fullName>InsuranceItem__c</fullName>
    <label>保険種目</label>
    <length>30</length>
    <type>Text</type>
</CustomField>