force-app/main/default/objects/Maturity_Follow_Data__c/fields/isForThank__c.field-meta.xml
<CustomField>
    <fullName>isForThank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>お礼状送付用</label>
    <type>Checkbox</type>
</CustomField>