force-app/main/default/objects/Maturity_Follow_Data__c/fields/isSend__c.field-meta.xml
<CustomField>
    <fullName>isSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>連携済み</label>
    <type>Checkbox</type>
</CustomField>