force-app/main/default/objects/Maturity_Follow_Data__c/fields/MembershipCode__c.field-meta.xml
<CustomField>
    <fullName>MembershipCode__c</fullName>
    <label>組合員コード</label>
    <length>40</length>
    <type>Text</type>
</CustomField>