force-app/main/default/objects/Maturity_Follow_Data__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>払込方法</label>
    <length>105</length>
    <type>Text</type>
</CustomField>