force-app/main/default/objects/Maturity_Follow_Data__c/fields/PeriodOfInsurance__c.field-meta.xml
<CustomField>
    <fullName>PeriodOfInsurance__c</fullName>
    <label>保険期間</label>
    <length>7</length>
    <type>Text</type>
</CustomField>