force-app/main/default/objects/Maturity_Follow_Data__c/fields/SecuritiesNumber__c.field-meta.xml
<CustomField>
    <fullName>SecuritiesNumber__c</fullName>
    <externalId>true</externalId>
    <label>証券番号</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>