force-app/main/default/objects/Maturity_Follow_Data__c/fields/SpecialAgreementYesNo__c.field-meta.xml
<CustomField>
    <fullName>SpecialAgreementYesNo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>通販特約有無</label>
    <type>Checkbox</type>
</CustomField>