force-app/main/default/objects/Maturity_Follow_Data__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>郵便番号</label>
    <length>32</length>
    <type>Text</type>
</CustomField>