force-app/main/default/objects/Maturity_Follow_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SecuritiesNumber__c</columns>
    <columns>ContractorName__c</columns>
    <columns>ContractorKana__c</columns>
    <columns>AgencyCode__c</columns>
    <columns>SpecialAgreementYesNo__c</columns>
    <columns>PhoneNumber__c</columns>
    <columns>PaymentMethod__c</columns>
    <columns>PeriodOfInsurance__c</columns>
    <columns>InsuranceFrom__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SpecialAgreementYesNo__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>すべて選択</label>
</ListView>